<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_equalizer_setting"
        android:title="Add" />
    <item
        android:id="@+id/remove_equalizer_setting"
        android:title="Remove" />
    <item
        android:id="@+id/rename_equalizer_setting"
        android:title="Rename" />
</menu>